counter without selector

--- a/src/app/counter/counter-output/counter-output.component.html
+++ b/src/app/counter/counter-output/counter-output.component.html
@@ -1,4 +1,3 @@
-<div class="row">
-    <!-- <h2 class="text-center">Counter : {{counter}}</h2> -->
-    <h2 class="text-center">Counter : {{(counter$ | async).counter}}</h2>
+<div class="row"> 
+    <h2 class="text-center">Counter : {{counter}}</h2>
 </div>
