counter with selector

--- a/src/app/counter/custom-counter-input/custom-counter-input.component.html
+++ b/src/app/counter/custom-counter-input/custom-counter-input.component.html
@@ -1,7 +1,7 @@
  <div class="container">
     <div class="row">
         <div class="col-md-4 text-center">
-            <h2>{{channelName}}</h2>
+            <h2>{{(channelName$ | async )}}</h2>
         </div>
 
         <div class="col-md-4 text-center" style="display: flex;">
