--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -1,5 +1,9 @@
 <div class="row">
     <div class="col md-12">
+        <div>
+            <button class="btn btn-primary" [routerLink]="['/posts/add']">Add Post</button>
+        </div>
+        
         <table class="table table-striped" *ngIf="posts$ | async as postData">
             <thead>
                 <tr>
@@ -17,5 +21,8 @@
             </tbody>
         </table>
 
+        <div class="co-md-4">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
